# progressive-x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  setup.py
data/breadcube/: breadcube.txt
dataset_comparison/: adelaideH.ipynb
examples/: cpp_example.cpp  example_multi_homography.ipynb  example_multi_lines.ipynb  example_multi_pose_6d.ipynb  example_multi_two_view_motion.ipynb  example_multi_vanishing_point.ipynb  line_segment_fitting.cpp
examples/img/: breadcube.txt  tless.txt  tless_poses.txt  unihouse.txt
include/: PEARL.cpp  PEARL.h  progress_visualizer.h  progressive_x.h  progx_model.h  progx_utils.h  scoring_function_with_compound_model.h
src/: main.cpp
src/pyprogressivex/include/: PEARL.h  common_vanishing_point_estimator.h  progress_visualizer.h  progressive_x.h  progressivex_python.h  progx_utils.h  scoring_function_with_compound_model.h  solver_two_vanishing_point_four_lines.h  solver_vanishing_point_two_lines.h
src/pyprogressivex/src/: bindings.cpp  progressivex_python.cpp
